C1: assert(appendix.not_null()) failed for invokehandle bytecode

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b105
    • Verified

      assert(appendix.not_null()) failed: test.java.lang.invoke.BigArityTest.test254(Ljava/lang/invoke/MethodHandle;[Ljava/lang/Object;Ljava/lang/Object;)V @ 1137 (invokehandle)




      call stack

      Stack: [0x0000007f20c44000,0x0000007f20d44000], sp=0x0000007f20d3ac80, free space=987k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xf2bb50] VMError::report(outputStream*, bool)+0x16c8;; VMError::report(outputStream*, bool)+0x16c8
      V [libjvm.so+0xf2c0d8] VMError::report_and_die(int, char const*, char const*, std::__va_list, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x144;; VMError::report_and_die(int, char const*, char const*, std::__va_list, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x144
      V [libjvm.so+0xf2cca4] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, std::__va_list)+0x54;; VMError::report_and_die(Thread*, char const*, int, char const*, char const*, std::__va_list)+0x54
      V [libjvm.so+0x64cfe8] report_vm_error(char const*, int, char const*, char const*, ...)+0xe0;; report_vm_error(char const*, int, char const*, char const*, ...)+0xe0
      V [libjvm.so+0x4434ac] Runtime1::patch_code(JavaThread*, Runtime1::StubID)+0x2698;; Runtime1::patch_code(JavaThread*, Runtime1::StubID)+0x2698
      V [libjvm.so+0x443794] Runtime1::move_appendix_patching(JavaThread*)+0x30;; Runtime1::move_appendix_patching(JavaThread*)+0x30
      v ~RuntimeStub::load_appendix_patching Runtime1 stub
      V [libjvm.so+0xfa14a0];; pipeline_res_stages_002+0x0

      Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
      v ~RuntimeStub::load_appendix_patching Runtime1 stub
      J 13505 C1 test.java.lang.invoke.BigArityTest.test254(Ljava/lang/invoke/MethodHandle;[Ljava/lang/Object;Ljava/lang/Object;)V (4698 bytes) @ 0x0000007f80add8a4 [0x0000007f80aa8010+0x0000000000035894]
      J 13498 C1 test.java.lang.invoke.BigArityTest.test254()V (1254 bytes) @ 0x0000007f80b3bd60 [0x0000007f80b308a0+0x000000000000b4c0]
      v ~StubRoutines::call_stub


      options : -server -Xcomp -XX:MaxRAMFraction=8 -XX:+CreateCoredumpOnCrash -ea -esa -XX:+TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -XX:+IgnoreUnrecognizedVMOptions -XX:-DoEscapeAnalysis -XX:+AggressiveOpts

            Assignee:
            Vladimir Ivanov
            Reporter:
            Jamsheed C M (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: