8146983: C1: assert(appendix.not_null()) failed for invokehandle bytecode

Reviewed-by: roland